/*
   Copyright 2018-2019 Banco Bilbao Vizcaya Argentaria, S.A.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
*/

syntax = "proto3";

package consensus;
option go_package = "consensus";

message NodeInfo {
    string node_id = 1;
    string raft_addr = 2;
    string mgmt_addr = 3;
    string http_addr = 4;
    string metrics_addr = 5;
}

message ClusterInfo {
    string leader_id = 1;
    map<string, NodeInfo> nodes = 2;
}

message RaftJoinRequest {
    string node_id = 1;
    string raft_addr = 2;
}

message RaftJoinResponse {
}

message FetchSnapshotRequest {
    uint64 lastAppliedVersion = 1;
    uint64 startSeqNum = 2;
    uint64 endSeqNum = 3;
}

message Chunk {
    bytes Content = 1;
}

message InfoResponse {
    NodeInfo node_info = 1;
}

message InfoRequest {
}

service ClusterService {
    rpc JoinCluster (RaftJoinRequest) returns (RaftJoinResponse);
    rpc FetchSnapshot (FetchSnapshotRequest) returns (stream Chunk);
    rpc FetchNodeInfo (InfoRequest) returns (InfoResponse);
}
